# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
#
# Smoke test for @score_cpp_policies//coverage.
#
# Build verification: `bazel build //coverage/...` from the tests workspace
# exercises macro expansion, genrule wiring, py_binary loading, and sh_binary
# construction. Coverage execution: `bazel coverage //coverage/...` then
# `bazel run //coverage:generate_coverage_html -- --yaml coverage/coverage_justifications.yaml`.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_python//python:defs.bzl", "py_test")
load(
    "@score_cpp_policies//coverage:defs.bzl",
    "score_coverage_reporter",
    "score_instrumented_sources_manifest",
)

cc_library(
    name = "coverable",
    srcs = ["coverable.cpp"],
    hdrs = ["coverable.h"],
    visibility = ["//visibility:public"],
)

# A library that is intentionally NOT linked into any cc_test. It exercises
# the "untested files" augmentation: the reporter must surface this file at
# 0% coverage even though llvm-cov never sees its object file.
cc_library(
    name = "uncovered",
    srcs = ["uncovered.cpp"],
    hdrs = ["uncovered.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "coverable_test",
    srcs = ["coverable_test.cpp"],
    target_compatible_with = ["@score_cpp_policies//sanitizers/constraints:no_tsan"],
    deps = [
        ":coverable",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# Project-specific extension of the baseline filter regexes.
# Exposed for the macro to consume.
exports_files(["coverage_filter_regexes.txt"])

# Manifest of all C/C++ sources reachable from the coverage targets. Anything
# in here that does not appear in the llvm-cov report is added at 0% coverage
# by the reporter.
score_instrumented_sources_manifest(
    name = "instrumented_sources",
    targets = [
        ":coverable",
        ":uncovered",
    ],
)

py_test(
    name = "reporter_test",
    srcs = ["reporter_test.py"],
    deps = ["@score_cpp_policies//coverage:reporter_lib"],
)

score_coverage_reporter(
    name = "reporter_wrapper",
    extra_regex_files = [":coverage_filter_regexes.txt"],
    instrumented_sources_manifest = ":instrumented_sources",
    llvm_cov = "@llvm_toolchain//:llvm-cov",
    llvm_profdata = "@llvm_toolchain//:llvm-profdata",
    visibility = ["//visibility:public"],
)
